--- a/core/templates/core/organizacion_list.html
+++ b/core/templates/core/organizacion_list.html
@@ -3,7 +3,7 @@
 
 {% block main_content %}
 <div class="container">
-    <h2 class="text-primary">Participación Ciudadana</h2>
+    <h2>Participación Ciudadana</h2>
     <hr class="pma-line-2"/>
     <div class="col-md-12">
         {% for object in object_list %}
