--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -328,7 +328,7 @@ footer .copyright {
     font-size: 36px;
     margin-right: 15px;
 }
-.pma-index-icons .pma-icon, .ver-mas .pma-icon{
+.pma-index-icons .pma-icon, .ver-mas .pma-icon, .pma-large-icons .pma-icon{
     font-size: 45px;
 }
 
