--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block indicator_title %}
-<h2 class="text-center">{% if municipio %}<strong>{{ municipio }}</strong><br/>{% endif %}</h2>
+<h2 class="text-center">{% if municipio %}<strong>{{ municipio }}</strong><br/>{% else %}Consolidado{% endif %}</h2>
 <hr class="pma-line-5"/>
 <h4 class="text-center">
     <strong>Origen de los Ingresos {% if year %}{{ year }}{% else %}2015 {% endif %}</strong>
@@ -58,24 +58,10 @@
 {% block section1 %}
 <div class="container">
     <div class="row">
-        <div class="col-md-7">
-            <h2> <strong>Detalle de Ingresos</strong> <br/> del período</h2>
+        <div class="col-md-6">
+            <h2> <strong>Ingresos</strong> <br/> Totales</h2>
 	    <hr class="pma-line-2">
-            <div class="chart-update col-xs-1 col-sm-1 col-md-1 float-left">
-                    <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
-                        aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
-                    <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                        pma-fg-gray toggle-chart" aria-hidden="true"
-                        data-chartcontainer="ejecutado"></span>
-                    {% if not municipio %}
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="comparativo2"></span>
-                    {% else %}
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="ejecutado_column"></span>
-                    {% endif %}
-                    <span class="pma-icon pe-7s-graph2 pma-fg-gray"
-                        aria-hidden="true" id="icons"></span>
-            </div>
-            <div class="col-md-11 bubbletree-container chart-container">
+            <div class="col-md-12 bubbletree-container chart-container">
                 <div id="bubble-1" class="bubbletree-wrapper view-main">
                     <div class="bubbletree"></div>
                 </div>
