--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -8,7 +8,7 @@
                 <!-- iniciando carrousel -->
                 <div id="slider-portada" class="carousel slide carousel-fade" data-ride="carousel">
                     <!-- Indicators -->
-                    <ol class="carousel-indicators">
+                    <ol class="carousel-indicators hidden-sm hidden-xs">
                         {% for i in banners %}
                         <li data-target="#slider-portada" data-slide-to="{{forloop.counter0}}" class="{% if forloop.first %} class="active"{% endif%}"></li>
                         {% endfor %}
@@ -21,11 +21,12 @@
                                 <h2 class="text-center">{{ i.titulo }}</h2>
                                 <h4 class="text-center">{{ i.descripcion }}</h4>
                             </div>
-                            <img src="/media/{{ i.imagen }}" alt="{{ banner }}" class="pma-illustration img-responsive">
+                            <img src="/media/{{ i.imagen }}" alt="{{ banner }}" class="pma-illustration img-responsive hidden-sm hidden-xs">
                         </div>
                         {% endfor %}
                     </div>
                     <!-- Controls -->
+                    <div class="hidden-sm hidden-xs">
                     <a class="left carousel-control" href="#slider-portada" role="button" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
@@ -34,6 +35,7 @@
                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                        <span class="sr-only">Next</span>
                     </a>
+                    </div>
                 </div>
                 <!-- fin carrousel -->
                 <!-- 
@@ -43,7 +45,7 @@
                     <img src="static/images/illustration-index.png" alt="..." class="pma-illustration">
                 </div-->
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 mapa-container">
                 <div id="nic-map-container"></div>
             </div>
         </div>
@@ -53,7 +55,7 @@
 {% block main_content %}
 <div class="container">
     <div class="row acerca">
-        <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="row">
                 <div class="col-md-12">
                     {% load i18n flatpages %}
@@ -61,13 +63,14 @@
                     {% for page in pages %}
                     <h3>{{ page.title }}</h3>
                     <hr class="pma-line-3">
+                    <img class="img-responsive" src="static/images/illustration-all-icons.png" alt="Sobre este sitio">
                     <p>{{ page.content|safe|truncatewords:80 }}</p>
                     <p><a href="/transferencias-presupuestarias/"> Leer m&aacute;s</a></p>
                     {% endfor %}
                 </div>
             </div>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-6">
+        <div class="hidden-xs col-xs-6 col-sm-6 col-md-6">
             <div class="row">
                 <div class="col-md-12">
                     <img class="img-responsive" src="static/images/illustration-all-icons.png" alt="Sobre este sitio">
@@ -80,7 +83,7 @@
     <div class="row row-eq-height pma-spacing-top pma-spacing-bottom">
         <div class="col-md-6 col-eq-height">
             <div class="gray-box">
-                <div class="pma-summary-box">
+                <div class="pma-summary-box hidden-xs">
                     <span class="font_small">Asignado:</span><span class="font_small">{{ data_oim.asignado|million }} millones</span><br />
                     <span class="font_small">Ejecutado:</span><span class="font_small">{{ data_oim.ajecutado|million }} millones</span>
                 </div>
@@ -91,7 +94,7 @@
                 {% else %}
                 <div class="row info-index">
                 {% endif %}
-                    <div class="col-xs-6 col-sm-6 col-md-6">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
                         <div class="info-box">
                             <span class="info-box-icon pma-fg-green pma-icon {{origen.subsubtipoingreso__origen__slug}}">
                             </span>
@@ -112,7 +115,7 @@
         </div>
         <div class="col-md-6 col-eq-height">
             <div class="gray-box">
-                <div class="pma-summary-box">
+                <div class="hidden-xs pma-summary-box">
                     <span class="font_small">Asignado:</span><span class="font_small">{{ data_ogm.asignado|million }} millones</span><br />
                     <span class="font_small">Ejecutado:</span><span class="font_small">{{ data_ogm.ajecutado|million }} millones</span>
                 </div>
@@ -123,7 +126,7 @@
                 {% else %}
                 <div class="row">
                 {% endif %}
-                    <div class="col-xs-6 col-sm-6 col-md-6">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
                         <div class="info-box">
                             <span class="info-box-icon pma-fg-green pma-icon {{ gasto.subsubtipogasto__origen__slug}}">
                             </span>
@@ -159,9 +162,9 @@
                         <p>Da clic en cada categoría de inversión para ver sus proyectos relacionados </p>
                         <p>&nbsp;</p>
                     </div>
-                    <div class="row col-xs-11 col-sm-11 col-md-11">
+                    <div class="row col-xs-12 col-sm-11 col-md-11">
                     {% for i in categorias %}
-                        <div class="col-xs-2 col-sm-2 col-md-2 text-center">
+                        <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center">
                             <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.slug }}">
                             </span></a>
                             <h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ yea }}&inversion__periodo={{ periodo}}&catinversion={{ i.catinversion__id }}" class="blanco"><strong>{{ i.nombre }}</strong></a></h5>
@@ -171,7 +174,7 @@
                     <div class="row list-icons-inversion">
                     {% endif %}
                     {% endfor %}
-			<div class="col-xs-1 col-sm-1 col-md-1">
+			<div class="col-xs-12 col-sm-1 col-md-1">
 	                    <div class="text-center ver-mas">
 				<a class="blanco" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><strong>VER MAS</strong></a>
 			    </div>
@@ -182,7 +185,7 @@
 			    	<div class="well">
 	        		       	<div class="row">
     					{% for i in otras_categorias %}
-						<div class="col-xs-2 col-sm-2 col-md-2 text-center">
+						<div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center">
 							<a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.slug }}"> </span></a>
 				                      	<h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}" class="blanco"><strong>{{ i.nombre }}</strong></a></h5>
 						</div>
